modified:   f4mine/structure.py 	new file:   f4mine/testfilename.str
Changes not staged for commit:
	modified:   f3ast (modified content, untracked content)

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,4 @@ resources/branchtrio-SizedUp.3mf
 resources/branchtrio-SizedUp.ipt
 resources/branchtrio.ipt
 resources/branchtrio.stl
+f4mine/testfilename.str
